// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionTableHeaderCell matches snapshot (basic) 1`] = `
<SelectionTableHeaderCell
  downloadFileTypes={
    [
      {
        "description": "File type 1",
        "id": "file1",
      },
      {
        "description": "File type 2",
        "id": "file-2",
      },
      {
        "description": "File type 3",
        "id": "file-type3",
      },
    ]
  }
  label="Action"
  onClick={[Function]}
  selectedRowIds={[]}
  tooltipContent=""
  width={1}
>
  <Memo(TableHeaderCell)
    flexGrow={1}
    justifyContent="center"
  >
    <ForwardRef(TableCell)
      borderBottom={null}
      flexGrow={1}
      justifyContent="center"
      overflow="visible"
    >
      <ForwardRef(Pane)
        alignItems="center"
        borderBottom={null}
        boxSizing="border-box"
        className="css-saeo60"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        justifyContent="center"
        onKeyDown={[Function]}
        overflow="visible"
        paddingX={12}
      >
        <Box
          alignItems="center"
          borderBottom={null}
          boxSizing="border-box"
          className="css-saeo60 css-nil"
          display="flex"
          flex={1}
          flexGrow={1}
          flexShrink={0}
          is="div"
          justifyContent="center"
          onKeyDown={[Function]}
          overflow="visible"
          paddingX={12}
        >
          <div
            className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_visible ub-ovflw-y_visible ub-flx-grow_1 ub-just-cnt_center"
            onKeyDown={[Function]}
          >
            <ForwardRef(Heading)
              size={500}
            >
              <Box
                boxSizing="border-box"
                color="#234361"
                fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
                fontSize="16px"
                fontWeight={500}
                is="h2"
                letterSpacing="-0.05px"
                lineHeight="20px"
                marginBottom={0}
                marginTop={0}
              >
                <h2
                  className="ub-mt_0px ub-mb_0px ub-fnt-sze_16px ub-f-wght_500 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-fnt-fam_b77syt ub-color_234361 ub-box-szg_border-box"
                >
                  Action
                </h2>
              </Box>
            </ForwardRef(Heading)>
          </div>
        </Box>
      </ForwardRef(Pane)>
    </ForwardRef(TableCell)>
  </Memo(TableHeaderCell)>
</SelectionTableHeaderCell>
`;

exports[`SelectionTableHeaderCell matches snapshot (with a selection) 1`] = `
<SelectionTableHeaderCell
  label="Action"
  onClick={[MockFunction]}
  selectedRowIds={
    [
      "E-EHCA-1",
      "E-MTAB-5200",
    ]
  }
  tooltipContent=""
  width={1}
>
  <Memo(TableHeaderCell)
    flexGrow={1}
    justifyContent="center"
  >
    <ForwardRef(TableCell)
      borderBottom={null}
      flexGrow={1}
      justifyContent="center"
      overflow="visible"
    >
      <ForwardRef(Pane)
        alignItems="center"
        borderBottom={null}
        boxSizing="border-box"
        className="css-saeo60"
        display="flex"
        flex={1}
        flexGrow={1}
        flexShrink={0}
        justifyContent="center"
        onKeyDown={[Function]}
        overflow="visible"
        paddingX={12}
      >
        <Box
          alignItems="center"
          borderBottom={null}
          boxSizing="border-box"
          className="css-saeo60 css-nil"
          display="flex"
          flex={1}
          flexGrow={1}
          flexShrink={0}
          is="div"
          justifyContent="center"
          onKeyDown={[Function]}
          overflow="visible"
          paddingX={12}
        >
          <div
            className="css-saeo60 css-nil ub-pl_12px ub-pr_12px ub-box-szg_border-box ub-flx_1 ub-dspl_flex ub-algn-itms_center ub-flx-srnk_0 ub-ovflw-x_visible ub-ovflw-y_visible ub-flx-grow_1 ub-just-cnt_center"
            onKeyDown={[Function]}
          >
            <ForwardRef(Heading)
              size={500}
            >
              <Box
                boxSizing="border-box"
                color="#234361"
                fontFamily=""SF UI Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol""
                fontSize="16px"
                fontWeight={500}
                is="h2"
                letterSpacing="-0.05px"
                lineHeight="20px"
                marginBottom={0}
                marginTop={0}
              >
                <h2
                  className="ub-mt_0px ub-mb_0px ub-fnt-sze_16px ub-f-wght_500 ub-ln-ht_20px ub-ltr-spc_-0-05px ub-fnt-fam_b77syt ub-color_234361 ub-box-szg_border-box"
                >
                  <a
                    onClick={[Function]}
                  >
                    Action 2 entries
                  </a>
                </h2>
              </Box>
            </ForwardRef(Heading)>
          </div>
        </Box>
      </ForwardRef(Pane)>
    </ForwardRef(TableCell)>
  </Memo(TableHeaderCell)>
</SelectionTableHeaderCell>
`;
